--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ html,body {position: relative; height:100%; padding:0; margin:0;font-family: 'No
 
 /*****HEADER*****/
 header {position: fixed;top: 0;width: 100vw;height: 80px;z-index: 3;}
+header:before {content: ''; position: fixed; top:60px; left:0; display: block; width: 100vw; height: 100vh; background-color: rgba(0,0,0,0.3);transform: scaleX(0); transition: .2s all ease;transform-origin: top left;}
+header.open:before {transform: scaleX(1);}
 header .header-wrap {background-color: #fff; transition: .3s all ease-in-out;}
 header.on .header-wrap {height:70px; background: linear-gradient(to right, #000536, 95%, #A2031B); background-size: 200% 200%;animation: gradient 1.5s ease both;}
 header.on .gnb {height: 70px;}
@@ -42,10 +44,9 @@ header .gnb {display: flex;max-width: 1300px;height: 80px;align-items: center;ma
 header .gnb .logo {position: relative; width: 160px; height: 38px; overflow: hidden; background: url('../images/logo.svg') no-repeat center;background-size: cover;background-position-y: -43px;}
 header.on .gnb .logo {background-position-y: 0px;}
 header .gnb .logo .logo-text {width: 0;height: 0;font-size: 0;text-indent: -9999px;overflow: hidden;}
-header .gnb .pagination {position: relative;top: 0; left:0; transform: translateY(0px);}
+header .gnb .pagination {position: relative;top: 0; left:0;display: flex; transform: translateY(0px);}
 header .gnb .pagination a::before {display: none;}
-header nav ul.pagination {display: flex;}
-header nav ul.pagination li {margin-left: 75px; margin-bottom: 0;}
+header nav ul.pagination li {margin-left: 75px;}
 header nav ul a {font-size: 20px; color:#000; transition: .3s all ease-in-out;}
 header.on nav a {color:#fff;}
 @keyframes gradient {
@@ -56,6 +57,19 @@ header.on nav a {color:#fff;}
 		background-position: 100% 50%;
 	}
 }
+
+/*HEADER MOBILE MENU*/
+.triggerBtn {display:none;position: absolute;top: 7px;left: 0px; transition: 0.3s all ease;}	
+.triggerBtn a {display: block;width: 50px; height:50px;}
+.triggerBtn a:hover .bar2 {width: 15px;}
+.triggerBtn a span {display: block;position: absolute;left:15px; width: 22px;height: 2px;background-color: #373737; transition: all 0.3s ease;}
+.triggerBtn .bar1 {top:14px;}
+.triggerBtn .bar2 {top:22px;}
+.triggerBtn .bar3 {top:30px;}
+header.on .triggerBtn a span {background-color: #fff;}
+header.open .triggerBtn .bar1 { -webkit-transform: translateY(8px) rotate(45deg);-ms-transform: translateY(8px) rotate(45deg);-o-transform: translateY(8px) rotate(45deg);transform: translateY(8px) rotate(45deg);}
+header.open .triggerBtn .bar2 {opacity: 0;}
+header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg);-ms-transform: translateY(-8px) rotate(-45deg);-o-transform: translateY(-8px) rotate(-45deg);transform: translateY(-8px) rotate(-45deg);}
 
 /*PAGENATION*/
 .panel.pagination {position: fixed;left: 20px;top: 50%;transform: translateY(-50%);z-index: 10;}
@@ -143,7 +157,7 @@ header.on nav a {color:#fff;}
 .visual-slider .text-cont {position: absolute; top: 45%; width:100vw; color: #fff;text-align: center;transform: translateY(-50%);}
 .visual-slider .text-cont.on {color: royalblue;}
 .visual-slider .text-cont .sub-text {display: inline-block; margin-bottom:23px; font-size: 36px; font-weight: 300; opacity: 0;}
-.visual-slider .text-cont p {font-size: 57px;font-weight: 300;opacity: 0;}
+.visual-slider .text-cont p {padding: 0 10px;line-height: 1.3;font-size: 57px;font-weight: 300;opacity: 0;}
 .visual-slider .text-cont strong {margin-right: 23px; font-weight: 500;}
 .visual-slider .text-cont .bullet {margin: 0 10px;font-size: 57px;font-weight: 300;opacity: 0;}
 .visual-slider .swiper-slide-active .text-cont span {animation: fadeInUp 1.5s both;}
@@ -174,10 +188,11 @@ header.on nav a {color:#fff;}
 .about-in {padding-top: 23vh;}
 .about-in .panel-top {margin-bottom: 100px;}
 .about-slider {position: relative; top:-70px;}
+.about-slider.mobile {display: none;}
 .about-slider .slider-title {margin-top: 90px;}
 .about-slider .slider-title .sub-title {display: inline-block; margin-bottom:15px; font-size: 20px; color: #334291;}
 .about-slider .slider-title .sp-title {margin-bottom: 40px;font-size: 32px; color: #06092B;font-weight: 500;}
-.about-slider .slider-text .sp-text {width: 400px;font-size: 18px;line-height: 30px; color: #555555;word-break: keep-all;}
+.about-slider .slider-text .sp-text {width: 400px;min-height: 180px; font-size: 18px;line-height: 30px; color: #555555;word-break: keep-all;}
 .about-slider .swiper {height: 570px;opacity: 0; transform: translateY(50px); transition: .5s .2s all ease-in-out;}
 .active .about-slider .swiper {opacity: 1; transform: translateY(0); overflow: visible;}
 .about-slider .swiper-slide {background: #fff;}
@@ -187,6 +202,9 @@ header.on nav a {color:#fff;}
 .current .swiper-slide-active .sp-img .imgbox { animation:leftMoveIn 0.5s cubic-bezier(0.24,0.57,0.45,1) both;}
 .out .sp-img .imgbox { animation:leftMoveOut 0.5s cubic-bezier(0.24,0.57,0.45,1) both;}
 .out .swiper-slide-active .sp-img .imgbox { animation:leftMoveIn 0.5s cubic-bezier(0.24,0.57,0.45,1) both;}
+.about-slider .slider-controls .count-slider {display: none; font-size: 14px;letter-spacing: 1px;}
+.about-slider .slider-controls .active-slide {font-size: 15px; font-weight: 500;}
+.about-slider .slider-controls .total-slide {}
 .about-slider .swiper-button-next {right: -5px;margin-top: -5%;} 
 .about-slider .swiper-button-next:after {content: ''; width: 18px;height: 30px; background: url('../images/arrow_next_b.svg') no-repeat center; background-size: cover;}
 .about-slider .swiper-button-prev {left: 36%;margin-top: -5%;}
@@ -198,6 +216,7 @@ header.on nav a {color:#fff;}
 .about-slider .swiper-slide-active .sub-title {animation: fadeInRight 1.5s both;}
 .about-slider .swiper-slide-active .sp-title {animation: fadeInRight 1.5s .2s both;}
 .about-slider .swiper-slide-active .sp-text {animation: fadeInRight 1.5s .3s both;}
+/* .about-slider .count-slider {display: none;} */
 @keyframes fadeInRight {
     0% {
         opacity: 0;
@@ -246,7 +265,7 @@ header.on nav a {color:#fff;}
 .business .column-list li:nth-child(2) .icon-box {width: 190px;}
 .business .column-list .arrow-left {position: absolute; top: 46%;left: 21%;transform: rotate(-45deg); transition: .3s all ease;opacity: 1;}
 .business .column-list .arrow-up {position: absolute; left:50%; top:35%; transform: translateX(-50%); transition: .3s all ease;opacity: 1;}
-.business .column-list .icon-box .arrow-right {position: absolute;top: 46%;right: 22%;transform: rotate(45deg); transition: .3s all ease;opacity: 1;}
+.business .column-list .arrow-right {position: absolute;top: 46%;right: 22%;transform: rotate(45deg); transition: .3s all ease;opacity: 1;}
 .business .column-list li:nth-child(1):hover .arrow-left {animation: arrowleft 1s infinite;}
 .business .column-list li:nth-child(1):hover .arrow-up {animation: arrowUp 1s infinite;}
 .business .column-list li:nth-child(1):hover .arrow-right {animation: arrowRight 1s infinite;}
@@ -611,29 +630,38 @@ footer .copyright span {margin-left:10px;}
     .wrapper {padding: 0 20px;}
     .top-btnbox .top-btn {right: 20px; bottom: 15px;}
 
-    /*HEADER*/
-    header .gnb {padding: 0 20px;}
-    header nav ul.pagination {display: none;}
+    /*****HEADER*****/
+    header, header.on .header-wrap {height: 60px;}
+    header .gnb {height: 60px; padding: 0 20px;}
+    header.on .gnb {height: 60px;}
+    header nav ul.pagination li {margin-left: 60px;}
     header nav ul a {font-size: 18px;}
-    
-    
+
+    /*PAGENATION*/
+    .panel.pagination {display: none;} 
 
     /*****INTRO*****/
     .visual-slider .text-cont .sub-text {font-size: 28px;}
     .visual-slider .text-cont p {font-size: 47px;}
 
     /*****ABOUT*****/
-    .about-slider .swiper {height: auto;opacity: 1;transform: translateY(0);}
-    .about-slider .swiper-button-prev {left: 42%;}
-    .about-slider .swiper-button-next {right:0;}
-    .sp-img .imgbox img {transform: translate(-22%,-20%) scale(0.7);}
+    .about-in {padding: 15vh 0 10vh;}
+    .about-slider .slider-title {margin-top: 5vh;}
+    .about-slider .swiper {height: 350px;opacity: 1;transform: translateY(0);;}
+    .about-slider .swiper-button-prev {left: 42%; margin-top:-3%;}
+    .about-slider .swiper-button-next {right:0; margin-top:-3%;}
+    .about-slider .swiper-pagination {bottom: 0;}
+    .sp-img .imgbox img {transform: translate(-22%,-36%) scale(0.7);}
 
     /*****BUSINESS*****/
+    .business-in {padding: 15vh 0 10vh;}
     .business .column-list {margin: 35px -20px 0;}
     .business .column-list li {margin: 0 20px; opacity: 1;transform: translateY(0);}
 
     /*****OUR POSITIONS*****/
+    .positions-in {padding: 15vh 0 10vh;}
     .mobis-slider .swiper-slide {opacity: 1;transform: translateY(0);}
+    .mobis-slider.destroy .swiper-slide {margin-left: 16px;}
     .mip-slider {opacity: 1;transform: translateY(0);}
     
     /*****LOCATION*****/
@@ -645,39 +673,86 @@ footer .copyright span {margin-left:10px;}
 @media screen and (max-width: 1024px) {
     .wrapper {height: auto;}
 
-    /*HEADER*/
-    
+    /*****HEADER*****/
+    header .gnb {justify-content: center;}
+    header .gnb .pagination {flex-wrap: wrap;}
+    header nav {position: fixed;top: 60px;width: 300px; height: 100vh;left: -300px;background-color: #fff;z-index: 2; box-shadow: 2px 7px 8px 2px rgb(0 0 0 / 20%); transition: .3s left ease;}
+    header.open nav {left: 0;}
+    header nav ul a, header.on nav a {color: #000;}
+    header nav ul a {display: block; padding-left: 25px;}
+    header nav ul.pagination li {width: 100%; height: 50px; line-height: 50px; margin:0; padding-left: 20px; border-top: 1px solid #EBEEFF;}
+    header nav ul.pagination li.on {background-color: rgba(51,66,145,0.07);}
+    header nav ul.pagination li.on a {font-weight: 500; color: #334291;}
+    header nav ul.pagination li:nth-child(1) {border-top: none;}
+    header nav ul.pagination li:nth-child(1) a {background: url('../images/home.svg') no-repeat left center;}
+    header nav ul.pagination li:nth-child(2) a {background: url('../images/about.svg') no-repeat left center;}
+    header nav ul.pagination li:nth-child(3) a {background: url('../images/business.svg') no-repeat left center;}
+    header nav ul.pagination li:nth-child(4) a {background: url('../images/positions.svg') no-repeat left center;}
+    header nav ul.pagination li:nth-child(5) a {background: url('../images/products.svg') no-repeat left center;}
+    header nav ul.pagination li:nth-child(6) a {background: url('../images/location.svg') no-repeat left center;}
+
+    .triggerBtn {display: block;}
 
     /*****INTRO*****/
     .visual-slider .pager {display: none;}
+    .visual-slider .text-cont strong {margin-right: 10px;}
 
     /*****ABOUT*****/
     .about-in {padding: 10vh 0;}
     .about-in .panel-top {margin-bottom: 50px;}
     .about-slider {top:0;}
     .about-slider .slider-title {margin: 0;}
-    
     .about-slider .swiper-slide-active .sub-title, .about-slider .swiper-slide-active .sp-title, .about-slider .swiper-slide-active .sp-text {animation: none;}
     .about-slider .sp-img {position: relative; top:0; left:0;}
-    .sp-img .imgbox img {position: relative; top:0; left:0; transform: translate(0px,0px);}
+    .sp-img .imgbox img {position: relative; top:0; left:0; transform: translate(0px,0px); width: 100%;}
     .current .sp-img .imgbox, .current .swiper-slide-active .sp-img .imgbox, .out .sp-img .imgbox, .out .swiper-slide-active .sp-img .imgbox { animation:none;}
-    .about-slider .swiper-button-next {right: 0; margin-top:0;}
-    .about-slider .swiper-button-prev {left:0; margin-top:0;}
-    .about-slider .slider-text .sp-text {width: auto;}
-    .about-slider .swiper-pagination {position: relative; bottom: 0;}
+    .about-slider .swiper {height: auto;}
+    .active .about-slider .swiper {overflow: hidden;}
+    .about-slider .swiper-wrapper {overflow: hidden;}
+    .about-slider .slider-controls {display: flex;margin-top: 15px;}
+    .about-slider .slider-controls .count-slider {display: flex;}
+    .about-slider .swiper-button-next {top: auto;right: 0;bottom: -12px; margin-top:0;}
+    .about-slider .swiper-button-next:after {width: 12px; height: 20px;}
+    .about-slider .swiper-button-prev {top: auto;left:auto; right:30px; bottom: -12px; margin-top:0;}
+    .about-slider .swiper-button-prev:after {width: 12px; height: 20px;}
+    .about-slider .slider-text .sp-text {width: auto; min-height: auto;}
+    .about-slider .swiper-pagination {display: flex; bottom: 6px; left: 50%; width: calc(100% - 100px); text-align: center; transform: translateX(-53%);}
+    .about-slider .swiper-pagination-bullet {width: 100%; height: 3px;background-color: #E0E0E0;}
+    .about-slider .swiper-pagination-bullet.swiper-pagination-bullet-active {transform: rotate(0deg);}
+    .about-slider .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .about-slider .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {margin:0}
+    /* .about-slider .count-slider {display: block;} */
 
     /*****BUSINESS*****/
     .business {height: auto;}
-    .business-in {padding-top: 10vh;}
+    .business-in {padding: 10vh 0;}
     .column-list {flex-wrap: wrap;}
+    .business .column-list {margin: 35px 0vw 0;}
     .business .column-list li {margin:0;}
+    .business .column-list .icon-item {padding: 0 2vw;}
     
     /*****OUR POSITIONS*****/
-    .positions-in {padding-top: 15vh;}
-    .positions {height: auto;}
-    .mobis-slider .swiper {overflow: hidden;}
+    .positions-in {padding: 10vh 0;}
+    .positions {height: auto; overflow: hidden;}
+    .positions .mobis-logo {top: auto; bottom: -60px; right:50px; width: 190px;}
+    .mobis-slider {margin: 90px 0 105px 0;}
+    .mobis-slider .swiper-slide:before {font-size: 130px;}
+    .mobis-slider .swiper-slide .positions-item {height: 165px;}
+    .mobis-slider .swiper-slide.swiper-slide-active:before {transform: translate(-55px, -60px);opacity: 0.4;}
+    .mobis-slider .swiper-slide.swiper-slide-active .positions-item {width: 216px;height: 216px; margin-top:-25px; background-color: #fff;box-shadow: 0px 7px 30px 3px rgb(0 0 0 / 47%);}
+    .mobis-slider .swiper-slide:nth-child(1).swiper-slide-active .icon-box {background-position-x: 13px;}
+    .mobis-slider .swiper-slide:nth-child(2).swiper-slide-active .icon-box {background-position-x: 0px;}
+    .mobis-slider .swiper-slide:nth-child(3).swiper-slide-active .icon-box {background-position-x: 0px;}
+    .mobis-slider .swiper-slide:nth-child(4).swiper-slide-active .icon-box {background-position-x: 7px;}
+    .mobis-slider .swiper-slide.swiper-slide-active .icon-text span {color: #1F2A65;}
+    .mobis-slider.swiper-slide.swiper-slide-active .icon-box {transform: scale(1.2);}
+    .mip-slider {margin-top:25px}
     .mip-slider .swiper {overflow: visible;}
-    .mip-slider .swiper-wrapper {flex-wrap: wrap;}
+    .mip-slider:before, .mip-slider .swiper:after {display: none;}
+    .mip-slider .swiper-wrapper {flex-wrap: wrap;padding: 0 20px; width: auto;}
+    .mip-slider .swiper-slide {border-top: 1px solid rgba(255,255,255,0.3);}
+    .mip-slider .swiper-slide:nth-child(1) {border:none;}
+    .mip-slider .swiper-slide:before, .mip-slider .swiper-slide:after {display: none;}
+    .swiper-button-next:after, .swiper-button-prev:after {display: none;}
     
     
     /*****POPUP*****/
@@ -694,4 +769,49 @@ footer .copyright span {margin-left:10px;}
 
     .slider-wrapper {height: auto;}
     .slider {height: auto;}
+}
+@media screen and (max-width: 768px) {
+    /*****BUSINESS*****/
+    .column-list .icon-text {margin-top: 16px;}
+    .column-list .icon-text p {margin-bottom: 10px;}
+    .business .column-list li {flex: 1 1 60%;}
+    .business .column-list li .icon-item {max-width: 420px; width: 100%; height: 350px;padding: 30px 2vw 16px;margin-top:12px; background-color: #fff;box-shadow: 0px 2px 15px 3px rgb(0 0 0 / 7%);}
+}
+@media screen and (max-width: 640px) {
+    .panel-top h2 {margin:-5px 8px 0 0; font-size: 24px;}
+    .panel-top span {font-size: 18px;}
+    .panel-text {width: auto; font-size: 15px; line-height: 23px;}
+
+    /*****INTRO*****/
+    .visual-slider .text-cont .sub-text {margin-bottom: 20px; font-size: 23px;}
+    .visual-slider .text-cont p {font-size: 30px; word-break: keep-all;}
+    .visual-slider .text-cont strong {margin-right: 0px;}
+    .visual-slider .text-cont .bullet {margin: 0 5px; font-size: 30px;}
+
+    /*****ABOUT*****/
+    .about-in {padding: 5vh 0;}
+    .about-in .panel-top {margin-bottom: 23px;}
+    .about-slider .slider-title .sub-title {margin-bottom: 8px; font-size: 16px;}
+    .about-slider .slider-title .sp-title {margin-bottom: 20px; font-size: 22px;}
+    .about-slider .slider-text .sp-text {margin-top:16px; font-size: 15px; line-height: 25px;}
+
+    /*****BUSINESS*****/
+    .business-in {padding: 5vh 0;}
+    .column-list .icon-text p {font-size: 19px; font-weight: 500;}
+    .column-list .icon-text span {line-height: 23px; font-size: 16px;}
+    .business .column-list li .icon-item {height: 250px;}
+    .business .column-list li:first-child .icon-item {margin: 0;}
+    .business .column-list li .icon-bgimg {width: 150px;}
+    .business .column-list .arrow-up, .business .column-list .arrow-left, .business .column-list .arrow-right {width: 20px;}
+    .business .column-list .arrow-left {}
+    .business .column-list .arrow-right {}
+    .business .column-list li:nth-child(2) .icon-box {width: 145px;}
+    .business .column-list .icon-box .user-blue, .business .column-list .icon-box .user-white {width: 60px;}
+    .business .column-list .icon-box .user-blue {top:11px;}
+    .business .column-list .icon-box .user-white {bottom: 11px;}
+
+    /*****OUR POSITIONS*****/
+    .check-title {font-size: 18px;}
+    .mobis-slider .swiper-slide {height: auto;}
+    .mip-slider .swiper-slide {padding: 33px 0; font-size: 15px;}
 }
