--- a/css/style.css
+++ b/css/style.css
@@ -814,6 +814,7 @@ footer .copyright span {margin-left:10px;}
     /*****OUR POSITIONS*****/
     .check-title {font-size: 18px;}
     .mobis-slider .swiper-slide {height: auto;}
+    .mobis-slider .swiper-slide .icon-text span p {font-size: 15px; line-height: 20px;}
     .positions.active .mobis-slider .swiper-slide.swiper-slide-active {transform: translateY(0) scale(1);}
     .positions.active .mobis-slider .swiper-slide {transform: scale(0.8);}
     .mip-slider .swiper-slide {padding: 33px 0; font-size: 15px;}
