--- a/css/style.css
+++ b/css/style.css
@@ -752,7 +752,7 @@ footer .copyright span {margin-left:10px;}
     .mip-slider .swiper-slide:before, .mip-slider .swiper-slide:after {display: none;}
     
     /*POPUP*/
-    .popup {left: 20px; right: 20px;}
+    .popup {left: 20px; right: 20px; height: 80vh;}
     .popup-head {padding: 15px 20px 15px 20px;}
     .popup-head .popup-title span {font-size: 15px;}
     .popup-head .popup-title h3 {font-size: 20px;}
@@ -760,7 +760,7 @@ footer .copyright span {margin-left:10px;}
     #hyundaiTab {height: 100%;}
     .tab-contents {overflow: hidden;height: calc(100% - 53px);}
     .tab-content {height: 100%;margin: 0;}
-    .tab-content.table-wrap {height: calc(100% - 0px);overflow: hidden; overflow-y: auto;}
+    .tab-content.table-wrap {height: calc(100% - 0px);overflow: auto;}
     .tabcont-in {flex-direction: column;height: 100%;}
     .tabs > li {font-size: 16px;}
     .car-imgbox {width: 100%;}
@@ -821,7 +821,6 @@ footer .copyright span {margin-left:10px;}
 
     /*****OUR POSITIONS*****/
     .check-title {font-size: 18px;}
-    .mobis-slider .swiper-slide {height: auto;}
     .mobis-slider .swiper-slide .icon-text span p {font-size: 15px; line-height: 20px;}
     
     .mip-slider .swiper-slide {padding: 33px 0; font-size: 15px;}
